--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,146 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
+<html class="page" lang="ru">
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+</head>
 
-  </body>
+<body class="page__body">
+  <header class="page-header">
+    <a class="page-header__logo">
+      <img class="page-header__logo-image" src="img/logotype-mobile.svg" alt="Логотип сайта Sedona" width="101"
+        height="84">
+    </a>
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a href="">Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a href="">Фото и видео</a>
+          </li>
+          <li class="site-list__item">
+            <a href="">Форма отзыва</a>
+          </li>
+          <li class="site-list__item">
+            <a href="">HTML Academy</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+
+  <section class="page-intro">
+    <h1>Sedona</h1>
+    <div class class="page-intro__wrapper">
+      <ul class="page-intro__image">
+        <img src="" alt="welcome">
+        <img src="" alt="gorgeous">
+        <img src="" alt="sedona">
+        <img src="" alt="because">
+        <img src="" alt="triangle">
+      </ul>
+      <div class="page-intro__text">
+        <h2>СЕДОНА — небольшой <br>городок в Аризоне, <br>заслуживающий большего!</h2>
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+        <img src="" alt="triangle">
+      </div>
+    </div>
+  </section>
+
+  <main class="page-main">
+    <section class="page-main__wrapper">
+      <div class="page-main__offer">
+        <div class="page-main__offer sity">
+          <h2>Настоящий городок</h2>
+          <p>№ 1</p>
+          <p class="sity-slogan">Седона не аттракцион для туристов, там течет своя жизнь</p>
+          <img src="" alt="foto sity">
+        </div>
+        <ul class="page-main__offer list">
+          <li class="offer__home">
+            <img src="img/icon-house.svg" alt="Жилье">
+            <h2>Жилье</h2>
+            <p class="home__slogan">Рекомендуем пожить в <br> настоящем мотеле, все как в <br> кино!</p>
+          </li>
+          <li class="offer__souvenir">
+            <img src="img/icon-gift.svg" alt="Сувениры">
+            <h3>Сувениры</h3>
+            <p class="souvenir__slogan">Не только китайского, но и <br> местного производства!</p>
+          </li>
+          <li class="offer__food">
+            <img src="img/icon-burger.svg" alt="Еда">
+            <h2>Еда</h2>
+            <p class="food__slogan">Всегда заказывайте <br> фирменный бургер, Вы не <br> разочаруетесь!</p>
+          </li>
+        </ul>
+        <div class="page-main__offer bridge">
+          <h2>Там есть мост дьявола</h2>
+          <p>№ 2</p>
+          <p class="bridge-slogan">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          <img src="" alt="foto__bridge">
+        </div>
+        <ul class="page-main__offer list">
+          <li class="offer__advantage">
+            <h2>Небольшая площадь</h2>
+            <p>№ 3</p>
+            <p class="advantage-slogan">Все интересные места находятся <br> очень близко</p>
+          </li>
+          <li>
+            <h2>Красивая дорога</h2>
+            <p>№ 4</p>
+            <p class="advantage-slogan">Ехать в Седону из Лас-Вегаса <br> совсем не скучно</p>
+          </li>
+          <li>
+            <h2>Мало туристов</h2>
+            <p>№ 5</p>
+            <p class="advantage-slogan">Большинство едет в Гранд Каньон <br> и толпится там</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="page-search">
+      <div class="page-search__wrapper">
+        <div class="page-search__text">
+          <h2>Заинтересовались</h2>
+          <p>Укажите предполагаемые даты <br> поездки, и мы покажем вам лучшие <br> предложения гостиниц в Седоне</p>
+          <a href="#">Найти гостиницу</a>
+        </div>
+        <div class="page-search__map-mobile">
+          <img src="img/map-mobile.jpg" alt="Карта штата">
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="page-footer">
+    <div class="page-footer__wrapper">
+      <div class="page-footer__contacts contacts">
+        <p>#visitSEDONA</p>
+      </div>
+      <div class="page-footer__social social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--twitter" href="">Твиттер</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--facebook" href="">Фейсбук</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--youtybe" href="">Ютуб</a>
+          </li>
+        </ul>
+      </div>
+      <div class="page-footer__copyright copyright">
+        <p class="copyright__text">Разработано</p>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
