исправил после валидатора

--- a/source/index.html
+++ b/source/index.html
@@ -36,18 +36,18 @@
 
   <section class="page-intro">
     <h1>Sedona</h1>
-    <div class class="page-intro__wrapper">
+    <div class="page-intro__wrapper">
       <ul class="page-intro__image">
-        <img src="" alt="welcome">
-        <img src="" alt="gorgeous">
-        <img src="" alt="sedona">
-        <img src="" alt="because">
-        <img src="" alt="triangle">
+        <li><img src="#" alt="welcome"></li>
+        <li><img src="#" alt="gorgeous"></li>
+        <li><img src="#" alt="sedona"></li>
+        <li><img src="#" alt="because"></li>
+        <li><img src="#" alt="triangle"></li>
       </ul>
       <div class="page-intro__text">
         <h2>СЕДОНА — небольшой <br>городок в Аризоне, <br>заслуживающий большего!</h2>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-        <img src="" alt="triangle">
+        <img src="#" alt="triangle">
       </div>
     </div>
   </section>
@@ -59,7 +59,7 @@
           <h2>Настоящий городок</h2>
           <p>№ 1</p>
           <p class="sity-slogan">Седона не аттракцион для туристов, там течет своя жизнь</p>
-          <img src="" alt="foto sity">
+          <img src="#" alt="foto sity">
         </div>
         <ul class="page-main__offer list">
           <li class="offer__home">
@@ -82,7 +82,7 @@
           <h2>Там есть мост дьявола</h2>
           <p>№ 2</p>
           <p class="bridge-slogan">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-          <img src="" alt="foto__bridge">
+          <img src="#" alt="foto__bridge">
         </div>
         <ul class="page-main__offer list">
           <li class="offer__advantage">
