--- a/source/index.html
+++ b/source/index.html
@@ -8,9 +8,8 @@
 
 <body class="page__body">
   <header class="page-header">
-    <a class="page-header__logo">
-      <img class="page-header__logo-image" src="img/logotype-mobile.svg" alt="Логотип сайта Sedona" width="101"
-        height="84">
+    <a class="logo">
+      <img class="logo-image" src="img/logotype-mobile.svg" alt="Логотип сайта Sedona" width="101" height="84">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -31,86 +30,81 @@
         </ul>
       </div>
     </nav>
+    <section class="page-intro">
+      <h1>Sedona</h1>
+      <div class="page-intro__wrapper">
+        <div class="page-intro__image">
+          <p><img src="#" alt="Welcome"></p>
+          <p><img src="#" alt="Sedona"></p>
+          <p><img src="#" alt="Because"></p>
+        </div>
+    </section>
   </header>
 
-
-  <section class="page-intro">
-    <h1>Sedona</h1>
-    <div class="page-intro__wrapper">
-      <ul class="page-intro__image">
-        <li><img src="#" alt="welcome"></li>
-        <li><img src="#" alt="gorgeous"></li>
-        <li><img src="#" alt="sedona"></li>
-        <li><img src="#" alt="because"></li>
-        <li><img src="#" alt="triangle"></li>
-      </ul>
-      <div class="page-intro__text">
-        <h2>СЕДОНА — небольшой <br>городок в Аризоне, <br>заслуживающий большего!</h2>
+  <main class="page-main">
+    <section class="page-offer">
+      <div class="page-offer__title">
+        <h2>СЕДОНА — небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
         <img src="#" alt="triangle">
       </div>
-    </div>
-  </section>
-
-  <main class="page-main">
-    <section class="page-main__wrapper">
-      <div class="page-main__offer">
-        <div class="page-main__offer sity">
-          <h2>Настоящий городок</h2>
-          <p>№ 1</p>
-          <p class="sity-slogan">Седона не аттракцион для туристов, там течет своя жизнь</p>
-          <img src="#" alt="foto sity">
-        </div>
-        <ul class="page-main__offer list">
-          <li class="offer__home">
-            <img src="img/icon-house.svg" alt="Жилье">
-            <h2>Жилье</h2>
-            <p class="home__slogan">Рекомендуем пожить в <br> настоящем мотеле, все как в <br> кино!</p>
-          </li>
-          <li class="offer__souvenir">
-            <img src="img/icon-gift.svg" alt="Сувениры">
-            <h3>Сувениры</h3>
-            <p class="souvenir__slogan">Не только китайского, но и <br> местного производства!</p>
-          </li>
-          <li class="offer__food">
-            <img src="img/icon-burger.svg" alt="Еда">
-            <h2>Еда</h2>
-            <p class="food__slogan">Всегда заказывайте <br> фирменный бургер, Вы не <br> разочаруетесь!</p>
-          </li>
-        </ul>
-        <div class="page-main__offer bridge">
-          <h2>Там есть мост дьявола</h2>
-          <p>№ 2</p>
-          <p class="bridge-slogan">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-          <img src="#" alt="foto__bridge">
-        </div>
-        <ul class="page-main__offer list">
-          <li class="offer__advantage">
-            <h2>Небольшая площадь</h2>
-            <p>№ 3</p>
-            <p class="advantage-slogan">Все интересные места находятся <br> очень близко</p>
-          </li>
-          <li>
-            <h2>Красивая дорога</h2>
-            <p>№ 4</p>
-            <p class="advantage-slogan">Ехать в Седону из Лас-Вегаса <br> совсем не скучно</p>
-          </li>
-          <li>
-            <h2>Мало туристов</h2>
-            <p>№ 5</p>
-            <p class="advantage-slogan">Большинство едет в Гранд Каньон <br> и толпится там</p>
-          </li>
-        </ul>
+      <div class="offer-sity offer-first">
+        <h2 class="offer-sity__title">Настоящий городок</h2>
+        <p>№ 1</p>
+        <p class="offer-sity__slogan">Седона не аттракцион для туристов, там течет своя жизнь</p>
+        <img src="#" alt="foto sity">
+      </div>
+      <ul class="offer-list">
+        <li class="offer-list__item">
+          <img src="img/icon-house.svg" alt="Жилье">
+          <h2>Жилье</h2>
+          <p class="offer-list__slogan">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+        </li>
+        <li class="offer-list__item">
+          <img src="img/icon-gift.svg" alt="Сувениры">
+          <h3>Сувениры</h3>
+          <p class="offer-list__slogan">Не только китайского, но и местного производства!</p>
+        </li>
+        <li class="offer-list__item">
+          <img src="img/icon-burger.svg" alt="Еда">
+          <h2>Еда</h2>
+          <p class="offer-list__slogan">Всегда заказывайте фирменный бургер, Вы не разочаруетесь!</p>
+        </li>
+      </ul>
+      <div class="offer-bridge">
+        <h2 class="offer-bridge offer-second">Там есть мост дьявола</h2>
+        <p>№ 2</p>
+        <p class=" offer-bridge__slogan">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+        <img src="#" alt="foto__bridge">
+      </div>
+      <ul class="offer-list">
+        <li class="offer-list offer-third">
+          <h2>Небольшая площадь</h2>
+          <p>№ 3</p>
+          <p class="offer-list__slogan">Все интересные места находятся очень близко</p>
+        </li>
+        <li class="offer-list offer-fourth">
+          <h2>Красивая дорога</h2>
+          <p>№ 4</p>
+          <p class="offer-list__slogan">Ехать в Седону из Лас-Вегаса совсем не скучно</p>
+        </li>
+        <li class="offer-list offer-fifth">
+          <h2>Мало туристов</h2>
+          <p>№ 5</p>
+          <p class="offer-list__slogan">Большинство едет в Гранд Каньон и толпится там</p>
+        </li>
+      </ul>
       </div>
     </section>
     <section class="page-search">
       <div class="page-search__wrapper">
-        <div class="page-search__text">
+        <div class="search-content">
           <h2>Заинтересовались</h2>
-          <p>Укажите предполагаемые даты <br> поездки, и мы покажем вам лучшие <br> предложения гостиниц в Седоне</p>
+          <p class="searsh-content__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие
+            предложения гостиниц в Седоне</p>
           <a href="#">Найти гостиницу</a>
         </div>
-        <div class="page-search__map-mobile">
+        <div class="page-search__maps">
           <img src="img/map-mobile.jpg" alt="Карта штата">
         </div>
       </div>
