--- a/source/index.html
+++ b/source/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html lang="ru">
 
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
 </head>
 
-<body class="page__body">
+<body>
   <header class="page-header">
-    <a class="logo">
-      <img class="logo-image" src="img/logotype-mobile.svg" alt="Логотип сайта Sedona" width="101" height="84">
-    </a>
     <nav class="main-nav">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <div class="main-nav__wrapper">
+        <a class="logo">
+          <img class="logo-image" src="#" alt="Логотип сайта Sedona" width="101" height="84">
+        </a>
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
             <a href="">Главная</a>
@@ -63,7 +63,7 @@
         </li>
         <li class="offer-list__item">
           <img src="img/icon-gift.svg" alt="Сувениры">
-          <h3>Сувениры</h3>
+          <h2>Сувениры</h2>
           <p class="offer-list__slogan">Не только китайского, но и местного производства!</p>
         </li>
         <li class="offer-list__item">
@@ -98,9 +98,9 @@
     </section>
     <section class="page-search">
       <div class="page-search__wrapper">
-        <div class="search-content">
+        <div class="page-search__content">
           <h2>Заинтересовались</h2>
-          <p class="searsh-content__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие
+          <p class="page-search__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие
             предложения гостиниц в Седоне</p>
           <a href="#">Найти гостиницу</a>
         </div>
