--- a/source/index.html
+++ b/source/index.html
@@ -33,11 +33,7 @@
     <section class="page-intro">
       <h1>Sedona</h1>
       <div class="page-intro__wrapper">
-        <div class="page-intro__image">
-          <p><img src="#" alt="Welcome"></p>
-          <p><img src="#" alt="Sedona"></p>
-          <p><img src="#" alt="Because"></p>
-        </div>
+        <img class="page-intro__image" src="img/text-index.svg" alt="Добро пожаловать в Седону"></img>
       </div>
     </section>
   </header>
