--- a/source/form.html
+++ b/source/form.html
@@ -38,8 +38,8 @@
     </section>
   </header>
 
-  <main class="page-menu">
-    <div class="review">
+  <main class="page-form">
+    <div class="page-form review">
       <h2>Оставьте свой отзыв </h2>
       <p class="review__text">Помогите нашим отелям стать лучше! <br> Оставьте отзыв о них, а также о <br> посещенных
         Вами <br> достопримечательностях</p>
