--- a/source/form.html
+++ b/source/form.html
@@ -4,147 +4,179 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <header class="page-header">
-    <nav class="main-nav">
-      <div class="main-nav__wrapper">
-        <a class="logo">
-          <img class="logo-image" src="#" alt="Логотип сайта Sedona" width="101" height="84">
-        </a>
-        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item">
-            <a href="">Главная</a>
-          </li>
-          <li class="site-list__item">
-            <a href="">Фото и видео</a>
-          </li>
-          <li class="site-list__item">
-            <a href="">Форма отзыва</a>
-          </li>
-          <li class="site-list__item">
-            <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <section class="page-intro">
-      <h1>Sedona</h1>
-      <div class="page-intro__wrapper">
-        <img class="page-intro__image" src="#" alt="Добро пожаловать в Седону">
-      </div>
-    </section>
-  </header>
-
-  <main class="page-main">
-    <div class="page-main review">
-      <h2>Оставьте свой отзыв </h2>
-      <p class="review__text">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных
-        Вами достопримечательностях</p>
-    </div>
-    <form class="main-form" action="https://echo.htmlacademy.ru" method="post">
-      <div class="form-information">
-        <h2 class="form-information__title">Представьтесь:</h2>
-        <div class="form-information form-data">
-          <div class="form-data__name">
-            <label>Имя:</label>
-            <input type="text" placeholder="Петр">
-          </div>
-          <div class="form-data__family">
-            <label>Фамилия:</label>
-            <input type="text" placeholder="Иванов">
-          </div>
-          <div class="form-data__patronymic">
-            <label>Отчество:</label>
-            <input type="text" placeholder="Александрович">
-          </div>
-        </div>
-        <div class="form-information form-contacts">
-          <h2>Контактная информация:</h2>
-          <div class="form-contacts__phone">
-            <label>Контактный телефон*:
-              <input class="form-contacts__tel" type="tel" placeholder="Введите телефон">
-            </label>
-            <label>
-              <input class="form-contacts__img" type="image" src="img/phone.svg" alt="telephone">
-            </label>
-          </div>
-          <div class="form-contacts__email">
-            <label>Электронная почта*:
-              <input class="form-contacts__mail" type="email" placeholder="Введите e-mail">
-            </label>
-            <label>
-              <input class="form-contacts__img" type="image" src="img/mail.svg" alt="mail">
-            </label>
-          </div>
-        </div>
-      </div>
-      <div class="form-information form-answer">
-        <h2>Ваше общее впечатление:</h2>
-        <ul class="form-answer__list">
-          <li class="form-answer__result-first">
-            <label><input type="radio" checked>Скорее положительное</label>
-          </li>
-          <li class="form-answer__result-second">
-            <label><input type="radio">Скорее отрицательное</label>
-          </li>
-          <li class="form-answer__result-third">
-            <label><input type="radio">Затрудняюсь ответить </label>
-          </li>
-        </ul>
-        <div class="form-information form-visits">
-          <h2 class="">Посещенные достопримечательности:</h2>
-          <ul class="form-information__list form-visits__list">
-            <li class="form-visits__item">
-              <label><input type="checkbox" name="bridge" checked>Мост дьявола</label>
-            </li>
-            <li class="form-visits__item">
-              <label><input type="checkbox" name="mountain" checked>Гора колокол</label>
-            </li>
-            <li class="form-visits__item">
-              <label><input type="checkbox" name="park" checked>Слайд-парк</label>
-            </li>
-            <li class="form-visits__item">
-              <label><input type="checkbox" name="rock">Красные скалы</label>
-            </li>
+  <div class="container">
+    <header class="page-header">
+      <nav class="main-nav">
+        <div class="main-nav__wrapper">
+          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item"><a href="">Главная</a></li>
+            <li class="site-list__item"><a href="">Фото и видео</a></li>
+            <li class="site-list__item"><a href="">Форма отзыва</a></li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a></li>
           </ul>
         </div>
-        <div class="form-information feedback">
-          <h2>Опишите свои эмоции:</h2>
-          <textarea name="comment" placeholder="Опишите подробно все свои восторги"></textarea>
-          <input class="feedback__button" type="submit" value="Отправить отзыв">
+      </nav>
+      <a class="page-header__logo page-header__logo--mobile" href="index.html">
+        <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" alt="Логотип сайта Sedona"></a>
+    </header>
+
+    <main class="page-main">
+      <h1 class="visually-hidden">Отзывы</h1>
+      <section class="advice advice--form">
+        <h2 class="visually-hidden">Формы отзыва</h2>
+        <div class="advice__image advice__image--form">
+          <img src="img/text-sedona.svg" alt="Добро пожаловать в Седону!" width="229" height="39">
+          <div class="advice__triangle"></div>
         </div>
-      </div>
-    </form>
-  </main>
+        <b class="advice__slogan">Оставьте свой отзыв</b>
+        <p class="advice__intro advice__intro--form">Помогите нашим отелям стать лучше! оставьте отзыв о них, а
+          также о посещенных вами достопримечательностях</p>
+      </section>
 
-  <footer class=" page-footer">
-    <div class="page-footer__wrapper">
-      <div class="page-footer__contacts contacts">
-        <p>#visitSEDONA</p>
-      </div>
-      <div class="page-footer__social social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--twitter" href="#">Твиттер</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--facebook" href="#">Фейсбук</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtybe" href="#">Ютуб</a>
-          </li>
-        </ul>
-      </div>
-      <div class="page-footer__copyright copyright">
-        <p class="copyright__text">Разработано</p>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-      </div>
-    </div>
-  </footer>
+      <form class="feedback-form" action="https://echo.htmlacademy.ru" method="get">
+        <fieldset class="feedback-form__item feedback-form__item--name">
+          <b class="feedback-form__b feedback-form__b--name">Представьтесь:</b>
+          <div class="form-name">
+            <label class="form-name__label" for="name"><span class="visually-hidden">Пожалуйста, введите
+                ваше</span>Имя<sup>*</sup>:</label>
+            <input class="form-name__input" type="text" name="name" id="name" placeholder="Петр">
+          </div>
+          <div class="form-name">
+            <label class="form-name__label" for="family"><span class="visually-hidden">Пожалуйста, введите
+                вашу</span>Фамилия<sup>*</sup>:</label>
+            <input class="form-name__input" type="text" name="family" id="surname" placeholder="Иванов">
+          </div>
+          <div class="form-name">
+            <label class="form-name__label" for="patronymic"><span class="visually-hidden">Пожалуйста, введите
+                ваше</span>Отчество:</label>
+            <input class="form-name__input" type="text" name="patronymic" id="dadsname" placeholder="Александрович">
+          </div>
+        </fieldset>
+        <fieldset class="feedback-form__item feedback-form__item--contacts">
+          <b class="feedback-form__b feedback-form__b--contacts">Контактная информация:</b>
+          <div class="feedback-form__wrapper feedback-form__wrapper--contacts">
+            <div class="form-contact">
+              <label class="form-contact__label" for="tel"><span class="form-contact__hiding-phone"><span
+                    class="visually-hidden">Пожалуйста, введите ваш</span>Контактный
+                </span>Телефон<sup>*</sup>:</label>
+              <p class="form-contact__input-container">
+                <input class="form-contact__input" type="tel" name="tel" id="tel" placeholder="Введите телефон">
+                <span class="form-contact__logo form-contact__logo--phone"></span>
+              </p>
+            </div>
+            <div class="form-contact">
+              <label class="form-contact__label" for="email"><span class="visually-hidden">Пожалуйста, введите
+                  вашу</span>Электронная почта<sup>*</sup>:</label>
+              <p class="form-contact__input-container">
+                <input class="form-contact__input" type="email" name="email" id="email" placeholder="Введите e-mail">
+                <span class="form-contact__logo form-contact__logo--env"></span>
+              </p>
+            </div>
+          </div>
+        </fieldset>
+        <fieldset class="feedback-form__item feedback-form__item--genfeedback">
+          <b class="feedback-form__b feedback-form__b--genfeedback">Ваше общее впечатление:</b>
+          <div class="feedback-form__wrapper">
+            <p class="form-radio">
+              <input class="form-radio__input visually-hidden" type="radio" id="positive" name="general-feedback"
+                value="positive" checked>
+              <label class="form-radio__label" for="positive">Скорее положительное</label>
+            </p>
+            <p class="form-radio">
+              <input class="form-radio__input visually-hidden" type="radio" id="negative" name="general-feedback"
+                value="negative">
+              <label class="form-radio__label" for="negative">Скорее отрицательное</label>
+            </p>
+            <p class="form-radio">
+              <input class="form-radio__input visually-hidden" type="radio" id="problem" name="general-feedback"
+                value="problem">
+              <label class="form-radio__label" for="problem">Затрудняюсь ответить</label>
+            </p>
+          </div>
+        </fieldset>
+        <fieldset class="feedback-form__item feedback-form__item--visited-places">
+          <b class="feedback-form__b feedback-form__b--visited-places">Посещенные Достопримечательности:</b>
+          <div class="feedback-form__wrapper feedback-form__wrapper--visited">
+            <p class="form-chbx form-chbx--bridge">
+              <input class="form-chbx__input visually-hidden" type="checkbox" id="bridge" name="bridge" checked>
+              <label class="form-chbx__label" for="bridge">Мост Дьявола</label>
+              <span class="form-chbx__label-tick"></span>
+            </p>
+            <p class="form-chbx form-chbx--bell">
+              <input class="form-chbx__input visually-hidden" type="checkbox" id="bell" name="bell">
+              <label class="form-chbx__label" for="bell">Гора-Колокол</label>
+              <span class="form-chbx__label-tick"></span>
+            </p>
+            <p class="form-chbx form-chbx--park">
+              <input class="form-chbx__input visually-hidden" type="checkbox" id="park" name="park" checked>
+              <label class="form-chbx__label" for="park">Слайд-парк</label>
+              <span class="form-chbx__label-tick"></span>
+            </p>
+            <p class="form-chbx form-chbx--rocks">
+              <input class="form-chbx__input visually-hidden" type="checkbox" id="redrocks" name="redrocks" checked>
+              <label class="form-chbx__label" for="redrocks">Красные скалы</label>
+              <span class="form-chbx__label-tick"></span>
+            </p>
+          </div>
+        </fieldset>
+        <fieldset class="feedback-form__item feedback-form__item--feedback">
+          <b class="feedback-form__b feedback-form__b--feedback">Опишите свои эмоции:</b>
+          <textarea class="feedback-form__textarea" id="feedback" name="feedback" rows="5"
+            placeholder="Опишите подробно все свои восторги"></textarea>
+        </fieldset>
+        <button class="feedback-form__button button" type="submit">Отправить отзыв</button>
+      </form>
+    </main>
 
+    <footer class="page-footer">
+      <p class="page-footer__hash-wrapper">
+        <span class="page-footer__hash">#Visitsedona</span>
+      </p>
+      <ul class="page-footer__social social">
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="visually-hidden">Твиттер</span>
+            <svg class="social__link-svg" xmlns="http://www.w3.org/2000/svg" width="18" height="15" fill="#fff">
+              <use xlink:href="#sp-icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="visually-hidden">Фейсбук</span>
+            <svg class="social__link-svg social__link-svg--fb" xmlns="http://www.w3.org/2000/svg" width="9" height="19"
+              fill="#fff">
+              <use xlink:href="#sp-icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="visually-hidden">Ютуб</span>
+            <svg class="social__link-svg social__link-svg--yt" xmlns="http://www.w3.org/2000/svg" width="20" height="14"
+              fill="#fff">
+              <use xlink:href="#sp-icon-youtube"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <p class="page-footer__copyright copyright">
+        <span class="copyright__info">Разработано</span>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <span class="visually-hidden">Ссылка на интенсив</span>
+          <svg class="copyright__link-svg" xmlns="http://www.w3.org/2000/svg" width="40" height="50">
+            <use xlink:href="#sp-logo-htmlacademy"></use>
+          </svg>
+        </a>
+      </p>
+    </footer>
+  </div>
 </body>
 
 </html>
