--- a/source/index.html
+++ b/source/index.html
@@ -12,10 +12,18 @@
     <header class="page-header">
       <nav class="main-nav">
         <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--active"><a class="site-list__link">Главная</a></li>
-          <li class="site-list__item"><a class="site-list__link" href="#">Фото и видео</a></li>
-          <li class="site-list__item"><a class="site-list__link" href="#">Форма отзыва</a></li>
-          <li class="site-list__item"><a class="site-list__link" href="#">Html academy</a></li>
+          <li class="site-list__item site-list__item--active">
+            <a class="site-list__link">Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="#">Фото и видео</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="#">Форма отзыва</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="#">Html academy</a>
+          </li>
         </ul>
         <button class="main-nav__toggle main-nav__toggle--closed" type="button"></button>
         <a class="page-header__logo page-header__logo--mobile">
@@ -30,16 +38,15 @@
         <h2 class="visually-hidden">Sedona</h2>
         <div class="advice__image advice__image--index">
           <img src="img/text-index.svg" alt="Добро пожаловать в Седону!" width="280" height="213">
-          <div class="advice__triangle"></div>
-        </div>
-        <div class="advice__welcome">
-          <b class="advice__slogan advice__slogan--small">Седона — небольшой городок в Аризоне, заслуживающий
-            большего!</b>
-          <p class="advice__intro">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
         </div>
       </section>
-
       <section class="features">
+        <div class="features__welcome">
+          <h2 class="features__slogan features__slogan--small">Седона — небольшой городок в Аризоне, заслуживающий
+            большего!
+          </h2>
+          <p class="features__intro">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+        </div>
         <h2 class="visually-hidden">Преимущества</h2>
         <div class="feature-photo feature-photo--first">
           <div class="feature-photo__triangle"></div>
@@ -71,11 +78,10 @@
           <div class="feature-photo__outline">
             <h3 class="feature-photo__title">Там есть мост дьявола</h3>
             <span class="feature-photo__number">— №2 —</span>
-            <p class="feature-photo__description">Да, по нему можно пройти! Если вы
-              осмелитесь, конечно</p>
+            <p class="feature-photo__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
           </div>
           <div class="feature-photo__image">
-            <img class="feature-photo__img feature-photo__img--2" src="img/photo-bridge@1x 1.jpg"
+            <img class="feature-photo__img feature-photo__img--second" src="img/photo-bridge@1x 1.jpg"
               alt="Мост Дьявола в Седоне">
           </div>
         </div>
@@ -104,8 +110,10 @@
           <p class="offer__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
             гостиниц
             в Cедоне</p>
-          <a class="offer__open-search button" href="#"><span class="visually-hidden">Предложения по
-              гостиницам</span>Найти гостиницу</a>
+          <a class="offer__open-search button" href="#">
+            <span class="visually-hidden">Предложения по гостиницам</span>
+            Найти гостиницу
+          </a>
         </div>
         <div class="map">
           <h2 class="visually-hidden">Карта местности Седоны</h2>
