--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,113 +4,150 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <header class="page-header">
-    <nav class="main-nav">
-      <div class="main-nav__wrapper">
-        <a class="logo">
-          <img class="logo-image" src="#" alt="Логотип сайта Sedona" width="101" height="84">
-        </a>
-        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+  <div class="container">
+    <header class="page-header">
+      <nav class="main-nav">
         <ul class="main-nav__list site-list">
-          <li class="site-list__item">
-            <a href="">Главная</a>
+          <li class="site-list__item site-list__item--active">
+            <a class="site-list__link">Главная</a>
           </li>
           <li class="site-list__item">
-            <a href="">Фото и видео</a>
+            <a class="site-list__link" href="#">Фото и видео</a>
           </li>
           <li class="site-list__item">
-            <a href="">Форма отзыва</a>
+            <a class="site-list__link" href="#">Форма отзыва</a>
           </li>
           <li class="site-list__item">
-            <a href="">HTML Academy</a>
+            <a class="site-list__link" href="#">Html academy</a>
           </li>
         </ul>
-      </div>
-    </nav>
-    <section class="page-intro">
-      <h1>Sedona</h1>
-      <div class="page-intro__wrapper">
-        <img class="page-intro__image" src="img/text-index.svg" alt="Добро пожаловать в Седону">
-      </div>
-    </section>
-  </header>
+        <button class="main-nav__toggle main-nav__toggle--closed" type="button"></button>
+        <a class="page-header__logo page-header__logo--mobile">
+          <img class="page-header__logo-image" src="img/logotype.svg" alt="City of Sedona">
+        </a>
+      </nav>
+    </header>
+    <main class="page-main">
+      <h1 class="visually-hidden">Страница о Седоне</h1>
+      <section class="banner">
+        <h2 class="visually-hidden">Pаздел фото и видео в Седоне</h2>
+        <div class="banner__image banner__image--photo">
+          <img src="img/text-sedona.svg" alt="Добро пожаловать в Седону!" width="229" height="39">
+        </div>
+        <b class="banner__slogan">Фото и видео</b>
+        <p class="banner__intro banner__intro--photo">Не можете решиться на путешествие из-за курса? Фотографии помогут
+          вам забыть о политике и экономике.</p>
+      </section>
 
-  <main>
-    <section class="page-catalog">
-      <div class="page-catalog__wrapper">
-        <div class="page-catalog__info info">
-          <h2 class="info__title">Фото и видео</h2>
-          <p class="info__text">Не можете решиться на путешествие <br> из-за курса? Фотографии помогут вам <br> забыть о
-            политике и экономике.</p>
+      <section class="articles">
+        <h2 class="visually-hidden">Раздел с фото и видео о Седоне</h2>
+        <div class="articles__wrapper">
+          <article class="article article--first">
+            <h3 class="visually-hidden">Первая статья с фото о Седоне</h3>
+            <a href="#" class="article__link">
+              <img class="article__image article__image--first" src="img/photo-1-mobile.jpg"
+                alt="Фото Неродные просторы">
+            </a>
+            <div class="article__outline">
+              <p class="article__author-wrapper">
+                <b class="article__title">Неродные просторы</b>
+                <span class="article__author-description">Автор фото: </span>
+                <span class="article__author">Борис</span>
+              </p>
+              <span class="article__likes article__likes--first">1350</span>
+            </div>
+          </article>
+          <article class="article">
+            <h3 class="visually-hidden">Вторая статья с фото о Седоне</h3>
+            <a href="#" class="article__link">
+              <img class="article__image" src="img/photo-2-mobile.jpg">
+            </a>
+            <div class="article__outline">
+              <p class="article__author-wrapper">
+                <b class="article__title">Местная растительность</b>
+                <span class="article__author-description">Автор фото: </span>
+                <span class="article__author">Сергей</span>
+              </p>
+              <span class="article__likes">143</span>
+            </div>
+          </article>
+          <article class="article">
+            <h3 class="visually-hidden">Третья статья с фото о Седоне</h3>
+            <a href="#" class="article__link">
+              <img class="article__image" src="img/photo-3-mobile.jpg">
+            </a>
+            <div class="article__outline">
+              <p class="article__author-wrapper">
+                <b class="article__title">Дорога на север</b>
+                <span class="article__author-description">Автор фото: </span>
+                <span class="article__author">Петр</span>
+              </p>
+              <span class="article__likes">96</span>
+            </div>
+          </article>
+          <article class="article">
+            <h3 class="visually-hidden">Четвертая статья с фото о Седоне</h3>
+            <a href="#" class="article__link">
+              <img class="article__image" src="img/photo-bridge@1x 1.jpg">
+            </a>
+            <div class="article__outline">
+              <p class="article__author-wrapper">
+                <b class="article__title">Мост дьявола</b>
+                <span class="article__author-description">Автор фото: </span>
+                <span class="article__author">Антон</span>
+              </p>
+              <span class="article__likes">254</span>
+            </div>
+          </article>
         </div>
-        <div class="page-catalog__info foto">
-          <ul class="foto__list">
-            <li class="foto__item">
-              <img src="#" alt="Неродные просторы">
-              <h3>Неродные просторы</h3>
-              <p>Автор фото: Борис</p>
-              <img src="#" alt="icon">
-              <p>1350</p>
-            </li>
-            <li class="foto__item">
-              <img src="#" alt="Местная растительность">
-              <h3>Местная растительность</h3>
-              <p>Автор фото: Сергей</p>
-              <img src="#" alt="icon">
-              <p>143</p>
-            </li>
-            <li class="foto__item">
-              <img src="#" alt="Дорога на север">
-              <h3>Дорога на север</h3>
-              <p>Автор фото: Петр</p>
-              <img src="#" alt="icon">
-              <p>96</p>
-            </li>
-            <li class="foto__item">
-              <img src="#" alt="Неродные просторы">
-              <h3>Мост дьявола</h3>
-              <p>Автор фото: Антон</p>
-              <img src="#" alt="icon">
-              <p>254</p>
-            </li>
-          </ul>
+        <div class="articles__video video">
+          <div class="video__outline">
+            <b class="video__title">Все еще сомневаетесь?</b>
+            <p class="video__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
+              очередной раз!</p>
+          </div>
+          <img class="video__player" src="img/video-mobile.jpg.jpg">
         </div>
-        <div class="page-catalog__info video">
-          <h2 class="video__title">Все еще сомневаетесь?</h2>
-          <p class="video__text">Смотрите видеопрезентацию и <br> скорее за билетами, пока они не <br>
-            подорожали в очередной раз!</p>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer class=" page-footer">
-    <div class="page-footer__wrapper">
-      <div class="page-footer__contacts contacts">
-        <p>#visitSEDONA</p>
-      </div>
-      <div class="page-footer__social social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--twitter" href="">Твиттер</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--facebook" href="">Фейсбук</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtybe" href="">Ютуб</a>
-          </li>
-        </ul>
-      </div>
-      <div class="page-footer__copyright copyright">
-        <p class="copyright__text">Разработано</p>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-      </div>
-    </div>
-  </footer>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <p class="page-footer__hash-wrapper">
+        <span class="page-footer__hash">#Visitsedona</span>
+      </p>
+      <ul class="page-footer__social social">
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="visually-hidden">Твиттер</span>
+            <img class="social__link-svg" src="img/icon-twitter.svg" alt="">
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="visually-hidden">Фейсбук</span>
+            <img class="social__link-svg" src="img/icon-facebook.svg" alt="">
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="visually-hidden">Ютуб</span>
+            <img class="social__link-svg" src="img/icon-youtube.svg" alt="">
+          </a>
+        </li>
+      </ul>
+      <p class="page-footer__copyright copyright">
+        <span class="copyright__info">Разработано</span>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <span class="visually-hidden">Ссылка на интенсив</span>
+          <img src="img/htmlacademy.svg" alt="">
+        </a>
+      </p>
+    </footer>
+  </div>
+  <script src="js/script.min.js"></script>
 </body>
 
 </html>
