--- a/source/form.html
+++ b/source/form.html
@@ -11,123 +11,155 @@
   <div class="container">
     <header class="page-header">
       <nav class="main-nav">
-        <div class="main-nav__wrapper">
-          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item"><a href="">Главная</a></li>
-            <li class="site-list__item"><a href="">Фото и видео</a></li>
-            <li class="site-list__item"><a href="">Форма отзыва</a></li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a></li>
-          </ul>
-        </div>
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item site-list__item--active">
+            <a class="site-list__link">Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="#">Фото и видео</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="#">Форма отзыва</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="#">Html academy</a>
+          </li>
+        </ul>
+        <button class="main-nav__toggle main-nav__toggle--closed" type="button"></button>
+        <a class="page-header__logo page-header__logo--mobile">
+          <img class="page-header__logo-image" src="img/logotype.svg" alt="City of Sedona">
+        </a>
       </nav>
-      <a class="page-header__logo page-header__logo--mobile" href="index.html">
-        <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" alt="Логотип сайта Sedona"></a>
     </header>
 
     <main class="page-main">
       <h1 class="visually-hidden">Отзывы</h1>
-      <section class="advice advice--form">
+      <section class="advice">
         <h2 class="visually-hidden">Формы отзыва</h2>
         <div class="advice__image advice__image--form">
-          <img src="img/text-sedona.svg" alt="Добро пожаловать в Седону!" width="229" height="39">
-          <div class="advice__triangle"></div>
+          <img src="img/text-index.svg" alt="Добро пожаловать в Седону!" width="229" height="39">
         </div>
-        <b class="advice__slogan">Оставьте свой отзыв</b>
-        <p class="advice__intro advice__intro--form">Помогите нашим отелям стать лучше! оставьте отзыв о них, а
-          также о посещенных вами достопримечательностях</p>
+        <div>
+          <b class="advice__slogan">Оставьте свой отзыв</b>
+          <p class="advice__intro advice__intro--form">Помогите нашим отелям стать лучше! оставьте отзыв о них, а
+            также о посещенных вами достопримечательностях</p>
+        </div>
       </section>
 
       <form class="feedback-form" action="https://echo.htmlacademy.ru" method="get">
         <fieldset class="feedback-form__item feedback-form__item--name">
-          <b class="feedback-form__b feedback-form__b--name">Представьтесь:</b>
+          <b class="feedback-form__bold feedback-form__bold--name">Представьтесь:</b>
           <div class="form-name">
-            <label class="form-name__label" for="name"><span class="visually-hidden">Пожалуйста, введите
-                ваше</span>Имя<sup>*</sup>:</label>
-            <input class="form-name__input" type="text" name="name" id="name" placeholder="Петр">
+            <label class="form-name__label" for="name">
+              <span class="visually-hidden">Пожалуйста, введите ваше</span>
+              Имя
+              <sup>*</sup>:
+            </label>
+            <input class="form-name__input" type="text" name="name" placeholder="Петр">
           </div>
           <div class="form-name">
-            <label class="form-name__label" for="family"><span class="visually-hidden">Пожалуйста, введите
-                вашу</span>Фамилия<sup>*</sup>:</label>
-            <input class="form-name__input" type="text" name="family" id="surname" placeholder="Иванов">
+            <label class="form-name__label" for="family">
+              <span class="visually-hidden">Пожалуйста, введите вашу</span>
+              Фамилия
+              <sup>*</sup>:
+            </label>
+            <input class="form-name__input" type="text" name="family" placeholder="Иванов">
           </div>
           <div class="form-name">
-            <label class="form-name__label" for="patronymic"><span class="visually-hidden">Пожалуйста, введите
-                ваше</span>Отчество:</label>
-            <input class="form-name__input" type="text" name="patronymic" id="dadsname" placeholder="Александрович">
+            <label class="form-name__label" for="patronymic">
+              <span class="visually-hidden">Пожалуйста, введите ваше</span>
+              Отчество:
+            </label>
+            <input class="form-name__input" type="text" name="patronymic" placeholder="Александрович">
           </div>
         </fieldset>
         <fieldset class="feedback-form__item feedback-form__item--contacts">
-          <b class="feedback-form__b feedback-form__b--contacts">Контактная информация:</b>
+          <b class="feedback-form__bold feedback-form__bold--contacts">Контактная информация:</b>
           <div class="feedback-form__wrapper feedback-form__wrapper--contacts">
             <div class="form-contact">
-              <label class="form-contact__label" for="tel"><span class="form-contact__hiding-phone"><span
-                    class="visually-hidden">Пожалуйста, введите ваш</span>Контактный
-                </span>Телефон<sup>*</sup>:</label>
+              <label class="form-contact__label" for="tel">
+                <span class="form-contact__hiding-phone">
+                  <span class="visually-hidden">Пожалуйста, введите ваш</span>
+                  Контактный
+                </span>
+                Телефон
+                <sup>*</sup>:
+              </label>
               <p class="form-contact__input-container">
-                <input class="form-contact__input" type="tel" name="tel" id="tel" placeholder="Введите телефон">
-                <span class="form-contact__logo form-contact__logo--phone"></span>
+                <input class="form-contact__input" type="tel" name="tel" placeholder="Введите телефон">
+                <input class="form-contact__logo form-contact__logo--phone" type="image" src="img/phone.svg"
+                  alt="Иконка телефона">
               </p>
             </div>
             <div class="form-contact">
-              <label class="form-contact__label" for="email"><span class="visually-hidden">Пожалуйста, введите
-                  вашу</span>Электронная почта<sup>*</sup>:</label>
+              <label class="form-contact__label" for="email">
+                <span class="visually-hidden">Пожалуйста, введите вашу</span>
+                Электронная почта
+                <sup>*</sup>:
+              </label>
               <p class="form-contact__input-container">
-                <input class="form-contact__input" type="email" name="email" id="email" placeholder="Введите e-mail">
-                <span class="form-contact__logo form-contact__logo--env"></span>
+                <input class="form-contact__input" type="email" name="email" placeholder="Введите e-mail">
+                <input class="form-contact__logo form-contact__logo--env" type="image" src="img/mail.svg"
+                  alt="Иконка e-mail">
               </p>
             </div>
           </div>
         </fieldset>
         <fieldset class="feedback-form__item feedback-form__item--genfeedback">
-          <b class="feedback-form__b feedback-form__b--genfeedback">Ваше общее впечатление:</b>
+          <b class="feedback-form__bold feedback-form__bold--genfeedback">Ваше общее впечатление:</b>
           <div class="feedback-form__wrapper">
             <p class="form-radio">
-              <input class="form-radio__input visually-hidden" type="radio" id="positive" name="general-feedback"
-                value="positive" checked>
-              <label class="form-radio__label" for="positive">Скорее положительное</label>
+              <label class="form-radio__label">
+                <input class="form-radio__input" type="radio" name="general-feedback" value="positive" checked>
+                Скорее положительное
+              </label>
             </p>
             <p class="form-radio">
-              <input class="form-radio__input visually-hidden" type="radio" id="negative" name="general-feedback"
-                value="negative">
-              <label class="form-radio__label" for="negative">Скорее отрицательное</label>
+              <input class="form-radio__input " type="radio" name="general-feedback" value="negative">
+              <label class="form-radio__label">
+                Скорее отрицательное
+              </label>
             </p>
             <p class="form-radio">
-              <input class="form-radio__input visually-hidden" type="radio" id="problem" name="general-feedback"
-                value="problem">
-              <label class="form-radio__label" for="problem">Затрудняюсь ответить</label>
+              <label class="form-radio__label">
+                <input class="form-radio__input " type="radio" name="general-feedback" value="problem">
+                Затрудняюсь ответить
+              </label>
             </p>
           </div>
         </fieldset>
         <fieldset class="feedback-form__item feedback-form__item--visited-places">
-          <b class="feedback-form__b feedback-form__b--visited-places">Посещенные Достопримечательности:</b>
+          <b class="feedback-form__bold feedback-form__bold--visited-places">Посещенные достопримечательности:</b>
           <div class="feedback-form__wrapper feedback-form__wrapper--visited">
             <p class="form-chbx form-chbx--bridge">
-              <input class="form-chbx__input visually-hidden" type="checkbox" id="bridge" name="bridge" checked>
-              <label class="form-chbx__label" for="bridge">Мост Дьявола</label>
-              <span class="form-chbx__label-tick"></span>
+              <label class="form-chbx__label" for="bridge">
+                <input class="form-chbx__input" type="checkbox" name="bridge" checked>
+                Мост Дьявола
+              </label>
             </p>
             <p class="form-chbx form-chbx--bell">
-              <input class="form-chbx__input visually-hidden" type="checkbox" id="bell" name="bell">
-              <label class="form-chbx__label" for="bell">Гора-Колокол</label>
-              <span class="form-chbx__label-tick"></span>
+              <label class="form-chbx__label" for="bell">
+                <input class="form-chbx__input" type="checkbox" name="bell" checked>
+                Гора-Колокол
+              </label>
             </p>
             <p class="form-chbx form-chbx--park">
-              <input class="form-chbx__input visually-hidden" type="checkbox" id="park" name="park" checked>
-              <label class="form-chbx__label" for="park">Слайд-парк</label>
-              <span class="form-chbx__label-tick"></span>
+              <label class="form-chbx__label" for="park">
+                <input class="form-chbx__input" type="checkbox" name="park" checked>
+                Слайд-парк
+              </label>
             </p>
             <p class="form-chbx form-chbx--rocks">
-              <input class="form-chbx__input visually-hidden" type="checkbox" id="redrocks" name="redrocks" checked>
-              <label class="form-chbx__label" for="redrocks">Красные скалы</label>
-              <span class="form-chbx__label-tick"></span>
+              <label class="form-chbx__label" for="redrocks">
+                <input class="form-chbx__input" type="checkbox" name="redrocks">
+                Красные скалы
+              </label>
             </p>
           </div>
         </fieldset>
         <fieldset class="feedback-form__item feedback-form__item--feedback">
-          <b class="feedback-form__b feedback-form__b--feedback">Опишите свои эмоции:</b>
-          <textarea class="feedback-form__textarea" id="feedback" name="feedback" rows="5"
+          <b class="feedback-form__bold feedback-form__bold--feedback">Опишите свои эмоции:</b>
+          <textarea class="feedback-form__textarea" name="feedback" rows="5"
             placeholder="Опишите подробно все свои восторги"></textarea>
         </fieldset>
         <button class="feedback-form__button button" type="submit">Отправить отзыв</button>
@@ -142,27 +174,19 @@
         <li class="social__item">
           <a class="social__link" href="#">
             <span class="visually-hidden">Твиттер</span>
-            <svg class="social__link-svg" xmlns="http://www.w3.org/2000/svg" width="18" height="15" fill="#fff">
-              <use xlink:href="#sp-icon-twitter"></use>
-            </svg>
+            <img class="social__link-svg" src="img/icon-twitter.svg" alt="">
           </a>
         </li>
         <li class="social__item">
           <a class="social__link" href="#">
             <span class="visually-hidden">Фейсбук</span>
-            <svg class="social__link-svg social__link-svg--fb" xmlns="http://www.w3.org/2000/svg" width="9" height="19"
-              fill="#fff">
-              <use xlink:href="#sp-icon-facebook"></use>
-            </svg>
+            <img class="social__link-svg" src="img/icon-facebook.svg" alt="">
           </a>
         </li>
         <li class="social__item">
           <a class="social__link" href="#">
             <span class="visually-hidden">Ютуб</span>
-            <svg class="social__link-svg social__link-svg--yt" xmlns="http://www.w3.org/2000/svg" width="20" height="14"
-              fill="#fff">
-              <use xlink:href="#sp-icon-youtube"></use>
-            </svg>
+            <img class="social__link-svg" src="img/icon-youtube.svg" alt="">
           </a>
         </li>
       </ul>
@@ -170,9 +194,7 @@
         <span class="copyright__info">Разработано</span>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <span class="visually-hidden">Ссылка на интенсив</span>
-          <svg class="copyright__link-svg" xmlns="http://www.w3.org/2000/svg" width="40" height="50">
-            <use xlink:href="#sp-logo-htmlacademy"></use>
-          </svg>
+          <img src="img/htmlacademy.svg" alt="">
         </a>
       </p>
     </footer>
