--- a/source/form.html
+++ b/source/form.html
@@ -37,10 +37,10 @@
       <section class="advice">
         <h2 class="visually-hidden">Формы отзыва</h2>
         <div class="advice__image advice__image--form">
-          <img src="img/text-index.svg" alt="Добро пожаловать в Седону!" width="229" height="39">
+          <img src="img/Sedona.svg" alt="Добро пожаловать в Седону!" width="229" height="39">
         </div>
         <div>
-          <b class="advice__slogan">Оставьте свой отзыв</b>
+          <h2 class="advice__slogan">Оставьте свой отзыв</h2>
           <p class="advice__intro advice__intro--form">Помогите нашим отелям стать лучше! оставьте отзыв о них, а
             также о посещенных вами достопримечательностях</p>
         </div>
