--- a/source/catalog.html
+++ b/source/catalog.html
@@ -31,88 +31,112 @@
         </a>
       </nav>
     </header>
+
     <main class="page-main">
-      <h1 class="visually-hidden">Страница о Седоне</h1>
-      <section class="banner">
-        <h2 class="visually-hidden">Pаздел фото и видео в Седоне</h2>
-        <div class="banner__image banner__image--photo">
-          <img src="img/text-sedona.svg" alt="Добро пожаловать в Седону!" width="229" height="39">
+      <section class="advice">
+        <h1 class="visually-hidden">Фото и видео</h1>
+        <div class="advice__image advice__image--form">
+          <img src="img/Sedona.svg" alt="Добро пожаловать в Седону!" width="229" height="39">
         </div>
-        <b class="banner__slogan">Фото и видео</b>
-        <p class="banner__intro banner__intro--photo">Не можете решиться на путешествие из-за курса? Фотографии помогут
-          вам забыть о политике и экономике.</p>
+        <div>
+          <h2 class="advice__slogan">Фото и видео</h2>
+          <p class="advice__intro advice__intro--form">Не можете решиться на путешествие из-за курса? Фотографии помогут
+            вам забыть о политике и экономике.</p>
+        </div>
+      </section>
+      <section class="page-catalog">
+        <h2 class="visually-hidden">Раздел с фото и видео о Седоне</h2>
+        <div class="page-catalog__wrapper">
+          <div class="catalog">
+            <h3 class="visually-hidden">Неродные просторы</h3>
+            <img class="catalog__image" src="img/photo-1-mobile.jpg" alt="Неродные просторы">
+            </a>
+            <ul class="catalog__outline">
+              <div class="catalog__author-wrapper">
+                <li class="catalog__title">Неродные просторы</li>
+                <li class="catalog__author-description">Автор фото:</li>
+                <li class="catalog__author">Борис</li>
+                <li class="catalog__likes">
+                  <img class="catalog__likes-svg" src="img/like-icon.svg" alt="like">1350
+                </li>
+            </ul>
+          </div>
+          <div class="catalog">
+            <h3 class="visually-hidden">Местная растительность</h3>
+            <img class="catalog__image" src="img/photo-2-mobile.jpg" alt="Местная растительность">
+            </a>
+            <ul class="catalog__outline">
+              <div class="catalog__author-wrapper">
+                <li class="catalog__title">Местная растительность</li>
+                <li class="catalog__author-description">Автор фото:</li>
+                <li class="catalog__author">Сергей</li>
+                <li class="catalog__likes">
+                  <img class="catalog__likes-svg" src="img/like-icon.svg" alt="like">143
+                </li>
+              </div>
+            </ul>
+          </div>
+          <div class="catalog">
+            <h3 class="visually-hidden">Дорога на север</h3>
+            <img class="catalog__image" src="img/photo-3-mobile.jpg" alt="Дорога на север">
+            </a>
+            <ul class="catalog__outline">
+              <div class="catalog__author-wrapper">
+                <li class="catalog__title">Дорога на север</li>
+                <li class="catalog__author-description">Автор фото:</li>
+                <li class="catalog__author">Петр</li>
+                <li class="catalog__likes">
+                  <img class="catalog__likes-svg" src="img/like-icon.svg" alt="like">96
+                </li>
+              </div>
+            </ul>
+          </div>
+          <div class="catalog">
+            <h3 class="visually-hidden">Мост дьявола</h3>
+            <img class="catalog__image" src="img/photo-4-desktop 1.jpg" alt="Мост дьявола">
+            </a>
+            <ul class="catalog__outline">
+              <div class="catalog__author-wrapper">
+                <li class="catalog__title">Мост дьявола</li>
+                <li class="catalog__author-description">Автор фото:</li>
+                <li class="catalog__author">Антон</li>
+                <li class="catalog__likes">
+                  <img class="catalog__likes-svg" src="img/like-icon.svg" alt="like">254
+                </li>
+              </div>
+            </ul>
+          </div>
+          <div class="page-catalog__video video">
+            <ul class="video__outline">
+              <li class="video__title">Все еще сомневаетесь?</li>
+              <li class="video__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
+                очередной раз!</li>
+            </ul>
+            <img class="video__player" src="img/video-mobile.jpg" alt="Видео">
+            <div class="video__control">
+              <div class="video__line">
+                <input class="slider" type="range" min="0" max="4000" step="1" value="3000">
+              </div>
+              <div class="video__replay">
+                <button class="video__button video__button--replay">
+                  <img src="img/replay.svg" alt="Кнопка смотреть заново">
+                </button>
+              </div>
+              <div class="video__cc">
+                <button class="video__button video__button--cc">
+                  <img src="img/subtitles.svg" alt="Кнопка субтитров">
+                </button>
+              </div>
+              <div class="video__fullscreen">
+                <button class="video__button video__button--fullscreen">
+                  <img src="img/fullscreen.svg" alt="Кнопка включения полного экрана">
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
 
-      <section class="articles">
-        <h2 class="visually-hidden">Раздел с фото и видео о Седоне</h2>
-        <div class="articles__wrapper">
-          <article class="article article--first">
-            <h3 class="visually-hidden">Первая статья с фото о Седоне</h3>
-            <a href="#" class="article__link">
-              <img class="article__image article__image--first" src="img/photo-1-mobile.jpg"
-                alt="Фото Неродные просторы">
-            </a>
-            <div class="article__outline">
-              <p class="article__author-wrapper">
-                <b class="article__title">Неродные просторы</b>
-                <span class="article__author-description">Автор фото: </span>
-                <span class="article__author">Борис</span>
-              </p>
-              <span class="article__likes article__likes--first">1350</span>
-            </div>
-          </article>
-          <article class="article">
-            <h3 class="visually-hidden">Вторая статья с фото о Седоне</h3>
-            <a href="#" class="article__link">
-              <img class="article__image" src="img/photo-2-mobile.jpg">
-            </a>
-            <div class="article__outline">
-              <p class="article__author-wrapper">
-                <b class="article__title">Местная растительность</b>
-                <span class="article__author-description">Автор фото: </span>
-                <span class="article__author">Сергей</span>
-              </p>
-              <span class="article__likes">143</span>
-            </div>
-          </article>
-          <article class="article">
-            <h3 class="visually-hidden">Третья статья с фото о Седоне</h3>
-            <a href="#" class="article__link">
-              <img class="article__image" src="img/photo-3-mobile.jpg">
-            </a>
-            <div class="article__outline">
-              <p class="article__author-wrapper">
-                <b class="article__title">Дорога на север</b>
-                <span class="article__author-description">Автор фото: </span>
-                <span class="article__author">Петр</span>
-              </p>
-              <span class="article__likes">96</span>
-            </div>
-          </article>
-          <article class="article">
-            <h3 class="visually-hidden">Четвертая статья с фото о Седоне</h3>
-            <a href="#" class="article__link">
-              <img class="article__image" src="img/photo-bridge@1x 1.jpg">
-            </a>
-            <div class="article__outline">
-              <p class="article__author-wrapper">
-                <b class="article__title">Мост дьявола</b>
-                <span class="article__author-description">Автор фото: </span>
-                <span class="article__author">Антон</span>
-              </p>
-              <span class="article__likes">254</span>
-            </div>
-          </article>
-        </div>
-        <div class="articles__video video">
-          <div class="video__outline">
-            <b class="video__title">Все еще сомневаетесь?</b>
-            <p class="video__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
-              очередной раз!</p>
-          </div>
-          <img class="video__player" src="img/video-mobile.jpg.jpg">
-        </div>
-      </section>
     </main>
     <footer class="page-footer">
       <p class="page-footer__hash-wrapper">
@@ -147,7 +171,6 @@
       </p>
     </footer>
   </div>
-  <script src="js/script.min.js"></script>
 </body>
 
 </html>
