сетка для главной

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -38,6 +38,9 @@
         <div class="advice__image advice__image--form">
           <img src="img/Sedona.svg" alt="Добро пожаловать в Седону!" width="229" height="39">
         </div>
+        <div class="advise__triangle">
+          <img src="img/triangle-mobile.svg" alt="">
+        </div>
         <div>
           <h2 class="advice__slogan">Фото и видео</h2>
           <p class="advice__intro advice__intro--form">Не можете решиться на путешествие из-за курса? Фотографии помогут
@@ -52,13 +55,14 @@
             <img class="catalog__image" src="img/photo-1-mobile.jpg" alt="Неродные просторы">
             </a>
             <ul class="catalog__outline">
-              <div class="catalog__author-wrapper">
-                <li class="catalog__title">Неродные просторы</li>
-                <li class="catalog__author-description">Автор фото:</li>
-                <li class="catalog__author">Борис</li>
-                <li class="catalog__likes">
-                  <img class="catalog__likes-svg" src="img/like-icon.svg" alt="like">1350
-                </li>
+              <p class="catalog__author-wrapper">
+                <b class="catalog__title">Неродные просторы</b>
+                <span class="catalog__author-description">Автор фото:</span>
+                <span class="catalog__author">Борис</span>
+              </p>
+              <span class="catalog__likes">
+                <img class="catalog__likes-svg" src="img/like-icon.svg" alt="like">1350
+              </span>
             </ul>
           </div>
           <div class="catalog">
@@ -66,14 +70,14 @@
             <img class="catalog__image" src="img/photo-2-mobile.jpg" alt="Местная растительность">
             </a>
             <ul class="catalog__outline">
-              <div class="catalog__author-wrapper">
-                <li class="catalog__title">Местная растительность</li>
-                <li class="catalog__author-description">Автор фото:</li>
-                <li class="catalog__author">Сергей</li>
-                <li class="catalog__likes">
+              <p class="catalog__author-wrapper">
+                <b class="catalog__title">Местная растительность</b>
+                <span class="catalog__author-description">Автор фото:</span>
+                <span class="catalog__author">Сергей</span>
+                <span class="catalog__likes">
                   <img class="catalog__likes-svg" src="img/like-icon.svg" alt="like">143
-                </li>
-              </div>
+                </span>
+              </p>
             </ul>
           </div>
           <div class="catalog">
@@ -81,14 +85,14 @@
             <img class="catalog__image" src="img/photo-3-mobile.jpg" alt="Дорога на север">
             </a>
             <ul class="catalog__outline">
-              <div class="catalog__author-wrapper">
-                <li class="catalog__title">Дорога на север</li>
-                <li class="catalog__author-description">Автор фото:</li>
-                <li class="catalog__author">Петр</li>
-                <li class="catalog__likes">
+              <p class="catalog__author-wrapper">
+                <b class="catalog__title">Дорога на север</b>
+                <span class="catalog__author-description">Автор фото:</span>
+                <span class="catalog__author">Петр</span>
+                <span class="catalog__likes">
                   <img class="catalog__likes-svg" src="img/like-icon.svg" alt="like">96
-                </li>
-              </div>
+                </span>
+              </p>
             </ul>
           </div>
           <div class="catalog">
@@ -96,22 +100,22 @@
             <img class="catalog__image" src="img/photo-4-desktop 1.jpg" alt="Мост дьявола">
             </a>
             <ul class="catalog__outline">
-              <div class="catalog__author-wrapper">
-                <li class="catalog__title">Мост дьявола</li>
-                <li class="catalog__author-description">Автор фото:</li>
-                <li class="catalog__author">Антон</li>
-                <li class="catalog__likes">
+              <p class="catalog__author-wrapper">
+                <b class="catalog__title">Мост дьявола</b>
+                <span class="catalog__author-description">Автор фото:</span>
+                <span class="catalog__author">Антон</span>
+                <span class="catalog__likes">
                   <img class="catalog__likes-svg" src="img/like-icon.svg" alt="like">254
-                </li>
-              </div>
+                </span>
+              </p>
             </ul>
           </div>
           <div class="page-catalog__video video">
-            <ul class="video__outline">
-              <li class="video__title">Все еще сомневаетесь?</li>
-              <li class="video__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
-                очередной раз!</li>
-            </ul>
+            <div class="video__outline">
+              <b class="video__title">Все еще сомневаетесь?</b>
+              <p class="video__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
+                очередной раз!</p>
+            </div>
             <img class="video__player" src="img/video-mobile.jpg" alt="Видео">
             <div class="video__control">
               <div class="video__line">
