--- a/source/index.html
+++ b/source/index.html
@@ -38,6 +38,9 @@
         <h2 class="visually-hidden">Sedona</h2>
         <div class="advice__image advice__image--index">
           <img src="img/text-index.svg" alt="Добро пожаловать в Седону!" width="280" height="213">
+          <div class="advise__triangle">
+            <img src="img/triangle-mobile.svg" alt="">
+          </div>
         </div>
       </section>
 
@@ -56,7 +59,7 @@
             <p class="feature-photo__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
           </div>
           <div class="feature-photo__image">
-            <img class="feature-photo__img" src="img/photo-city@1x 1.jpg" alt="Седона - настоящий город, не аттракцион">
+            <img class="feature-photo__img" src="img/photo-city@1x1.jpg" alt="Седона - настоящий город, не аттракцион">
           </div>
         </div>
         <ul class="features__list">
@@ -82,7 +85,7 @@
               осмелитесь, конечно</p>
           </div>
           <div class="feature-photo__image">
-            <img class="feature-photo__img feature-photo__img--second" src="img/photo-bridge@1x 1.jpg"
+            <img class="feature-photo__img feature-photo__img--second" src="img/photo-bridge@1x1.jpg"
               alt="Мост Дьявола в Седоне">
           </div>
         </div>
@@ -155,7 +158,6 @@
         </a>
       </p>
     </footer>
-  </div>
   </div>
 </body>
 
